--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,16 @@
     "Audience": "cams-client",
     "ExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 7
+  },
+  "EmailSettings": {
+    "SmtpHost": "live.smtp.mailtrap.io",
+    "SmtpPort": 587,
+    "SmtpUsername": "",
+    "SmtpPassword": "",
+    "FromEmail": "mailtrap@example.com",
+    "FromName": "CAMS System",
+    "EnableSsl": true,
+    "UseAuthentication": true,
+    "TimeoutSeconds": 30
   }
 }
