--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=CamsDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost,1433;Database=CamsDb;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;MultipleActiveResultSets=False;"
   },
   "AllowedHosts": "*",
   "JwtSettings": {
@@ -19,8 +19,8 @@
   "EmailSettings": {
     "SmtpHost": "live.smtp.mailtrap.io",
     "SmtpPort": 587,
-    "SmtpUsername": "",
-    "SmtpPassword": "",
+    "SmtpUsername": "98fdd0b970f7e7",
+    "SmtpPassword": "ae639c51eb3547",
     "FromEmail": "mailtrap@example.com",
     "FromName": "CAMS System",
     "EnableSsl": true,
