--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -52,6 +52,13 @@ http {
         root /usr/share/nginx/html;
         index index.html index.htm;
 
+        # Health check endpoint
+        location /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+
         # Handle client-side routing
         location / {
             try_files $uri $uri/ /index.html;
