--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,7 +4,7 @@
 # =============================================================================
 # API Configuration
 # =============================================================================
-VITE_APP_API_URL=http://localhost:5000
+VITE_APP_API_URL=/api
 VITE_APP_API_TIMEOUT=30000
 VITE_APP_API_RETRY_ATTEMPTS=3
 VITE_APP_API_RETRY_DELAY=1000
@@ -58,5 +58,5 @@ VITE_APP_MAX_FILE_UPLOAD_SIZE=10485760
 # Legacy Environment Variables (Deprecated)
 # =============================================================================
 # These are maintained for backward compatibility but should be migrated
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=/api
 VITE_GA_MEASUREMENT_ID=
