added workflow fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,6 +122,11 @@ jobs:
     name: Security Scanning
     runs-on: ubuntu-latest
     
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
