--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -117,6 +117,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-test
 
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
