--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,10 +28,11 @@ jobs:
         ports:
           - 1433:1433
         options: >-
-          --health-cmd="/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P YourStrong!Passw0rd -Q 'SELECT 1'"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
+          --health-cmd="/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P YourStrong!Passw0rd -Q 'SELECT 1' -C"
+          --health-interval=30s
+          --health-timeout=10s
+          --health-retries=5
+          --health-start-period=60s
 
     steps:
     - name: Checkout code
@@ -52,27 +53,24 @@ jobs:
 
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./Backend
 
     - name: Build
       run: dotnet build --no-restore --configuration Release
-      working-directory: ./Backend
 
     - name: Run tests
       run: dotnet test --no-build --configuration Release --logger trx --collect:"XPlat Code Coverage"
-      working-directory: ./Backend
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
       if: always()
       with:
         name: backend-test-results
-        path: Backend/TestResults/
+        path: TestResults/
 
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
       with:
-        file: Backend/TestResults/*/coverage.cobertura.xml
+        file: TestResults/*/coverage.cobertura.xml
         flags: backend
         name: backend-coverage
 
@@ -86,7 +84,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
@@ -152,7 +150,6 @@ jobs:
 
     - name: Check for vulnerable packages
       run: |
-        cd Backend
         dotnet restore
         dotnet list package --vulnerable --include-transitive 2>&1 | tee vulnerable-packages.txt
         if grep -q "has the following vulnerable packages" vulnerable-packages.txt; then
@@ -245,6 +242,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [deploy]
     if: always()
+    
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
     
     steps:
     - name: Notify deployment status
