workflow fix in progress

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,7 +6,8 @@
   },
   "globals": {
     "gtag": "readonly",
-    "process": "readonly"
+    "process": "readonly",
+    "ImportMetaEnv": "readonly"
   },
   "extends": [
     "eslint:recommended"
