notification work in progress, db connection work in progress, other bugs are in the process of being fixed. once all unit tests are fully implemented pr structuring will be more organized

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,8 @@ services:
     environment:
       - NODE_ENV=production
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/health"]
       interval: 30s
@@ -84,7 +85,7 @@ services:
     volumes:
       - sql_data_prod:/var/opt/mssql
     healthcheck:
-      test: ["CMD-SHELL", "timeout 1 bash -c '</dev/tcp/localhost/1433' && sleep 5 || exit 1"]
+      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P \"$SA_PASSWORD\" -Q \"SELECT 1\" -C -l 30"]
       interval: 15s
       timeout: 10s
       retries: 10
