--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "jsdom": "^23.0.1",
     "msw": "^2.0.8",
+    "openapi-typescript": "^7.8.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2",
