--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=CamsDb;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;MultipleActiveResultSets=False;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=CamsDb;Username=postgres;Password=YourStrong!Passw0rd;"
   },
   "AllowedHosts": "*",
   "JwtSettings": {
