--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -35,9 +35,9 @@ services:
       - ASPNETCORE_URLS=http://+:8080
       # Database Configuration
       - DB_HOST=db
-      - DB_PORT=1433
+      - DB_PORT=5432
       - DB_NAME=CamsDb
-      - DB_USER=sa
+      - DB_USER=postgres
       - DB_PASSWORD=${DB_PASSWORD:-YourStrong!Passw0rd}
       # JWT Configuration
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-super-secret-jwt-key-that-is-at-least-32-characters-long!}
@@ -74,18 +74,18 @@ services:
     restart: unless-stopped
 
   db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    image: postgres:16-alpine
     container_name: "${COMPOSE_PROJECT_NAME:-cams}-database-prod"
     environment:
-      - ACCEPT_EULA=Y
-      - SA_PASSWORD=${DB_PASSWORD:-YourStrong!Passw0rd}
-      - MSSQL_PID=Express
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-YourStrong!Passw0rd}
+      - POSTGRES_DB=CamsDb
     ports:
-      - "1433:1433"
+      - "5432:5432"
     volumes:
-      - sql_data_prod:/var/opt/mssql
+      - postgres_data_prod:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P \"$SA_PASSWORD\" -Q \"SELECT 1\" -C -l 30"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 15s
       timeout: 10s
       retries: 10
@@ -101,5 +101,5 @@ networks:
     name: "${COMPOSE_PROJECT_NAME:-cams}-network-prod"
 
 volumes:
-  sql_data_prod:
-    name: "${COMPOSE_PROJECT_NAME:-cams}-sql-data-prod"
+  postgres_data_prod:
+    name: "${COMPOSE_PROJECT_NAME:-cams}-postgres-data-prod"
