--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ permissions:
   contents: read
 
 env:
-  DOTNET_VERSION: '8.0.x'
+  DOTNET_VERSION: '8.0.412'
   NODE_VERSION: '20.x'
   DOCKER_REGISTRY: ghcr.io
   DOCKER_IMAGE_NAME: ${{ github.repository }}
@@ -65,6 +65,7 @@ jobs:
   frontend:
     name: Frontend Build & Test
     runs-on: ubuntu-latest
+    needs: [backend]  # Need backend to generate types
     permissions:
       contents: read
       actions: write
@@ -76,6 +77,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Setup .NET (for type generation)
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
+    
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
@@ -85,6 +91,34 @@ jobs:
     
     - name: Install dependencies
       run: npm ci
+    
+    - name: Generate OpenAPI types
+      run: |
+        # Start backend for type generation
+        cd ..
+        dotnet restore
+        dotnet build --configuration Release
+        
+        # Start API in background
+        nohup dotnet run --no-build --configuration Release --urls=http://localhost:8080 > api.log 2>&1 &
+        API_PID=$!
+        
+        # Wait for API to be ready
+        timeout 120 bash -c 'until curl -s http://localhost:8080/health; do sleep 2; done'
+        
+        # Generate types
+        cd frontend
+        npm run generate-types-from-url
+        
+        # Stop the API
+        kill $API_PID || true
+    
+    - name: Check for type changes
+      run: |
+        if [[ -n $(git status --porcelain src/types/api.generated.ts) ]]; then
+          echo "API types were updated during build"
+          git diff src/types/api.generated.ts
+        fi
     
     - name: Lint
       run: npm run lint
@@ -139,7 +173,7 @@ jobs:
   docker:
     name: Docker Build
     runs-on: ubuntu-latest
-    needs: [backend, frontend]
+    needs: [frontend]  # Frontend already depends on backend
     if: success()
     
     permissions:
@@ -199,7 +233,7 @@ jobs:
   integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
-    needs: [backend, frontend]
+    needs: [frontend]  # Frontend already depends on backend
     if: success()
     
     steps:
@@ -223,7 +257,7 @@ jobs:
   sonarcloud:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
-    needs: [backend, frontend]
+    needs: [frontend]  # Frontend already depends on backend
     if: success() && github.event_name != 'pull_request'
     
     steps:
@@ -242,7 +276,7 @@ jobs:
   summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [backend, frontend, security, docker, integration-tests]
+    needs: [frontend, security, docker, integration-tests]  # Frontend already depends on backend
     if: always()
     
     steps:
