--- a/cams.csproj
+++ b/cams.csproj
@@ -22,10 +22,12 @@
         <PackageReference Include="MailKit" Version="4.13.0" />
         <PackageReference Include="MimeKit" Version="4.13.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
-        <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
-        <PackageReference Include="MySql.Data" Version="8.3.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
+        <PackageReference Include="MySqlConnector" Version="2.3.7" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-        <PackageReference Include="System.Drawing.Common" Version="4.7.2" />
+        <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
         <PackageReference Include="NCrontab" Version="3.3.3" />
         <PackageReference Include="System.Text.Json" Version="8.0.5" />
